their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the CVS log comments.


CHANGES - Current Version:
--------------------------

Version 1.5.0 ??? (CVS)
--------------------------------

- Fixed build problem (link with -ldl not available) on MacOSX (bug 1167)


Version 1.5.0-beta1 (2005-10-07)
--------------------------------

- Added read/write support for MapInfo Collections in MIF and TAB (bug 1126)
  (Thanks to funding from Comcast (Andy Canfield) and an initial patch and
   analysis of collections by Jim Hope of Innogistic Software)

- New C API methods to access collection members (bug 1126):
     - mitab_c_get_collection_region_ref()
     - mitab_c_get_collection_polyline_ref()
     - mitab_c_get_collection_multipoint_ref()
     - mitab_c_set_collection_region()
     - mitab_c_set_collection_polyline()
     - mitab_c_set_collection_multipoint()

- Support for writing affine projection params in .MAP header (AJD, bug 1155)

- New C API methods to get/set various projection parameters (AJD, bug 1155):
     - mitab_c_get_projection_info()
     - mitab_c_set_projection_info()
     - mitab_c_get_datum_info()
     - mitab_c_set_datum_info()
     - mitab_c_get_affine_params()
     - mitab_c_set_affine_params()

- All datum definitions in mitab_spatialref.cpp now have the correct 
  names (Anthony D, bug 1155)

- Added bounds entries for Finnish KKJ and Swedish projections (AJD, bug 1155)

- mitab_ogr_datasource.cpp: avoid leak of CPLReadDirectory() result.

- gcc4 related warnings in mitab_coordsys.cpp and mitab_utils.cpp avoided.

- Change the way \n and \ are handled internally. Now they are stored 
  unescaped in memory and escaped only when writing MIF files. (bug 1107)

- Improved handling of Danish modified TM proj#21-24 (HSS, bugs 976,1010)

- Upgraded CPL and OGR source from latest GDAL CVS (as of 2005-05-12)
